unpackaged/main/default/objects/nbavs__Insight_User_View__c/nbavs__Insight_User_View__c.object-meta.xml
<CustomObject>
    <label>Insight User View</label>
    <nameField>
        <displayFormat>IUV-{000000}</displayFormat>
        <label>View Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insight User Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>