unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__AuthorAcknowledgedCount__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AuthorAcknowledgedCount__c</fullName>
    <label>Author Acknowledged Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>