unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__AuthorOpenAcknowledgedCount__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AuthorOpenAcknowledgedCount__c</fullName>
    <label>Author Open Acknowledged Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>