unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__CreatedNoteCount__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CreatedNoteCount__c</fullName>
    <inlineHelpText>Number of notes this user has created on this Insight.</inlineHelpText>
    <label>Created Note Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>