unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__FirstView__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FirstView__c</fullName>
    <inlineHelpText>Date and time that the user first viewed this Insight record.</inlineHelpText>
    <label>First View</label>
    <type>DateTime</type>
</CustomField>