unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__Insight__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insight__c</fullName>
    <label>Insight</label>
    <referenceTo>nbavs__Insights__c</referenceTo>
    <relationshipLabel>Views</relationshipLabel>
    <relationshipName>Views</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>