unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__Insight_Natterbox_UserId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insight_Natterbox_UserId__c</fullName>
    <description>This field is created to get the user id of the natterbox user on insight record record to use in a push topic query which isn&#39;t support relationship fields.</description>
    <formula>CASESAFEID(nbavs__Insight__r.nbavs__Natterbox_User__r.nbavs__User__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insight Natterbox UserId</label>
    <type>Text</type>
</CustomField>