unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__Is_Favourite__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Is_Favourite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the user has favourited this Insight.</inlineHelpText>
    <label>Is Favourite</label>
    <type>Checkbox</type>
</CustomField>