unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__Is_Read__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Is_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the user has seen this Insight since it was last updated.</inlineHelpText>
    <label>Is Read</label>
    <type>Checkbox</type>
</CustomField>