unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__Is_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Is_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the user is a supervisor (group admin).</inlineHelpText>
    <label>Is Supervisor</label>
    <type>Checkbox</type>
</CustomField>