unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__LastView__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LastView__c</fullName>
    <inlineHelpText>Date and time of the most recent view of this Insight record by this user.</inlineHelpText>
    <label>Last View</label>
    <type>DateTime</type>
</CustomField>