unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__RelatedClosedNoteCount__c.field-meta.xml
<CustomField>
    <fullName>nbavs__RelatedClosedNoteCount__c</fullName>
    <label>Related Closed Note Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>