unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__RelatedNoteCount__c.field-meta.xml
<CustomField>
    <fullName>nbavs__RelatedNoteCount__c</fullName>
    <inlineHelpText>Number of related notes this user has on this Insight.</inlineHelpText>
    <label>Related Note Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>