unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__UnreadNoteCount__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UnreadNoteCount__c</fullName>
    <inlineHelpText>Number of unread notes this user has on this Insight.</inlineHelpText>
    <label>Unread Note Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>