unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Insight Views</relationshipLabel>
    <relationshipName>InsightViews</relationshipName>
    <type>Lookup</type>
</CustomField>