unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__UserId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UserId__c</fullName>
    <description>This field is created to get the user id of the user on user view record to use in a push topic query which isn&#39;t support relationship fields.</description>
    <formula>CASESAFEID(nbavs__User__r.nbavs__User__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserId</label>
    <type>Text</type>
</CustomField>