unpackaged/main/default/objects/nbavs__Insight_User_View__c/fields/nbavs__ViewCount__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ViewCount__c</fullName>
    <inlineHelpText>Number of times this user has viewed this Insight.</inlineHelpText>
    <label>View Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>